# radar_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
0_math_intro/: math_refresher.ipynb
10_detected_image_chain/: detected_image.ipynb
1_radar/: pulse_compression.ipynb  pulse_compression_austin.ipynb  radar_intro.ipynb
1_radar/radar_data/: 4_2_1_polarizer.txt  4_2_1_sphere.txt  4_3_3_cyl_background.txt  4_3_3cyl_vert.txt  4_3_4cyl_30deg.txt  4_3_6.txt  4_3_6_background.txt  4_3_background.txt  5_1_12s.txt  5_1_12spct.txt  5_1_8s.txt  5_1_background.txt
1_radar_introduction/: radar_intro.ipynb
1_radar_introduction/radar_data/: 4_1d.txt  4_2_1_background.txt  4_3_12insphere.txt  4_3_2_12increep.txt  4_3_5flatplate.txt  4_3_5flatplate_avg.txt  5_1_8spct.txt  5_1_ct.txt
2_how_a_radar_determines_range/: pulse_compression.ipynb
2_how_a_radar_determines_range/images/: stretch_block_diagram.ppm  stretch_processing.ppm
2_pulse_compression/: pulse_compression.ipynb
3_antennas/: antennas.ipynb
3_antennas/images/: real_antenna_array.jfif
4_fmcw_imaging/: fmcw.ipynb
5_sar_intro/: sar_intro.ipynb
6_sar_modeling/: sar_modeling.ipynb
7_basic_image_formation/: basic_image_formation.ipynb
8_polar_formatting/: polar_formatting.ipynb
9_autofocus/: autofocus.ipynb
final_exam/: final_exam.ipynb
