[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-learning"
version = "2025.0.0"
dependencies = [
  "numpy",
  "matplotlib",
  "jupyter",
  "scipy",
  "sarpy",
  "scikit.image",
]
requires-python = ">=3.8"
authors = [
  {name = "Austin Travis"},
]
description = "Radur lurning"
readme = "README.md"
